@@ -1,6 +1,8 @@
 Revision history for {{ $dist->name }}:
 
 {{$NEXT}}
+  [Documentation]
+  - Added section on performance issues.
 
 v0.3.1    2018-11-09 18:48:21+00:00 Europe/London
   [Documentation]
